# vello

./: Cargo.toml  upstream.sh
.github/workflows/: ci.yml  update-allocation-snapshots.yml
examples/simple_sdl2/: Cargo.toml
examples/with_winit/: Cargo.toml
sparse_strips/vello_api/: Cargo.toml
sparse_strips/vello_api/src/: glyph.rs
sparse_strips/vello_bench/: Cargo.toml
sparse_strips/vello_bench/src/: data.rs  glyph.rs  strip.rs
sparse_strips/vello_common/: Cargo.toml  build.rs
sparse_strips/vello_common/src/: clip.rs  coarse.rs  glyph.rs  paint.rs  strip.rs  strip_generator.rs
sparse_strips/vello_cpu/: Cargo.toml
sparse_strips/vello_cpu/src/: render.rs
sparse_strips/vello_cpu/tests/: basic.rs  (+1 more)
sparse_strips/vello_example_scenes/: Cargo.toml
sparse_strips/vello_hybrid/: Cargo.toml  install_chrome.sh  run.sh  webdriver.json
sparse_strips/vello_hybrid/examples/: render_to_file.rs  run.sh  text.rs
sparse_strips/vello_hybrid/examples/native_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/scenes/src/: clip.rs  image.rs  lib.rs  text.rs
sparse_strips/vello_hybrid/examples/webgl/src/: lib.rs
sparse_strips/vello_hybrid/examples/wgpu_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/winit/src/: main.rs
sparse_strips/vello_hybrid/shaders/: clear_slots.wgsl  in.hlsl  out.frag  out.vert  render_strips.wgsl  sparse_strip_clear_slots.wgsl  sparse_strip_clip.wgsl
sparse_strips/vello_hybrid/src/: gradient_cache.rs  lib.rs  multi_atlas.rs  render.rs  scene.rs  schedule.rs
sparse_strips/vello_hybrid/src/render/: common.rs  mod.rs  webgl.rs  wgpu.rs
sparse_strips/vello_hybrid/tests/: wasm.rs  web.rs
sparse_strips/vello_sparse_tests/: .gitignore  Cargo.toml
sparse_strips/vello_toy/: Cargo.toml
(+311 files in other folders)
