[package]
name = "simple_sdl2"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The dependencies here are independent from the workspace versions
[dependencies]
# When using this example outside of the original Vello workspace,
# remove the path property of the following Vello dependency requirement.
vello = { version = "0.4.0", path = "../../vello" }
pollster = "0.4.0"
sdl2 = { git = "https://github.com/taj-p/rust-sdl2.git", rev = "1bd2d178d355e82b8165a125be8a455737889664", features = ["raw-window-handle", "bundled"] }
