[package]
name = "vello_hybrid"
version.workspace = true
description = "A hybrid CPU/GPU renderer for Vello, balancing computation between CPU and GPU for efficiency."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# Prevent accidental publishing until the initial release
publish = false

[lints]
workspace = true

[dependencies]
vello_common = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
wgpu = { workspace = true, features = ["webgl"] }

[dev-dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
js-sys = "0.3.77"
log = "0.4"
pollster = { workspace = true }
png = "0.17.14"
roxmltree = "0.20.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = ["Window", "HtmlCanvasElement", "CssStyleDeclaration"] }
winit = "0.30.9"
